# ots_bot_scraper

./: main.py  pyproject.toml
.github/workflows/: lint.yml
src/core/: env.py  settings.py
src/tutorial/tutorial/: middlewares.py  pipelines.py  settings.py
