[tool.poetry]
name = "rivalia-ots-bot"
version = "0.1.0"
description = ""
authors = ["bgozlinski <bartlomiej.gozlinski@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.8"
bandit = "^1.8.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
