[tool.poetry]
name = "rivalia-ots-bot"
version = "0.1.0"
description = ""
authors = ["bgozlinski <bartlomiej.gozlinski@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.8"
bandit = "^1.8.6"
scrapy = "2.11.2"
django-environ = ">=0.12.0,<0.13.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = ">=0.13.3,<0.14.0"
safety = ">=3.6.2,<4.0.0"
mypy = ">=1.18.2,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
